# s3al-simulator

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  install.sh
doc/: README.md  kernel_event_loop_activity.puml  logger_class_diagram.puml  memory_manager_sequence_diagram.puml  scheduler_sequence_diagram.puml
meetings/: internal-2025-09-10.md  internal-2025-09-16.md  internal-2025-09-18.md  internal-2025-09-21.md  internal-2025-09-26.md  internal-2025-10-03.md  internal-2025-10-14.md  internal-2025-10-17.md  internal-2025-10-28.md  internal-2025-10-31.md  internal-2025-11-04.md  internal-2025-11-18.md  internal-2025-11-20(1).md  internal-2025-11-20(2).md  internal-2025-11-21.md  internal-2025-11-28.md  internal-2025-12-09.md  internal-2025-12-12.md  internal-2025-12-16.md  internal-2025-12-29.md  internal-2026-01-05.md  internal-2026-01-06.md
src/: README.md  main.cpp
src/ProcessManager/: Process.h  ProcessManager.cpp  ProcessManager.h
src/ProcessManager/InputTest/: main.cpp
src/ProcessManager/OutputTest/: CPUScheduler.cpp  CPUScheduler.h  MemoryManager.cpp  MemoryManager.h
src/common/: ColorUtils.h  LoggingMixin.h  TimeUtils.h
src/config/: Config.cpp  Config.h
src/daemon/: Daemon.cpp  Daemon.h  DaemonRegistry.cpp  DaemonRegistry.h  MonitoringDaemon.cpp  MonitoringDaemon.h
src/init/: Init.cpp  Init.h
src/kernel/: Kernel.cpp  Kernel.h  SysCalls.h  SysCallsAPI.h
src/logger/: Logger.cpp  Logger.h
src/memory/: Memory.cpp  Memory.h  MemoryManager.cpp  MemoryManager.h
src/process/: Process.cpp  Process.h  ProcessManager.cpp  ProcessManager.h
src/process_manager/: process.h
src/process_manager/process_tools/: crud.cpp  crud.h
src/scheduler/: CPUScheduler.cpp  CPUScheduler.h  ScheduledTask.h  Scheduler.cpp  Scheduler.h  cpu_scheduler.cpp  cpu_scheduler.h  process.h  scheduler.cpp  scheduler.h
src/scheduler/algorithms/: FCFSAlgorithm.cpp  FCFSAlgorithm.h  PriorityAlgorithm.cpp  PriorityAlgorithm.h  RoundRobinAlgorithm.cpp  RoundRobinAlgorithm.h  SchedulerAlgorithm.h  SchedulingAlgorithm.cpp  SchedulingAlgorithm.h
src/scheduler/sched_algos/: Fcfs.h  PriorityQueue.h  fcfs.h  priorityqueue.h  roundrobin.h
src/shell/: CommandAPI.h  CommandParser.cpp  CommandParser.h  CommandsInit.h  Shell.cpp  Shell.h  Shell.hpp  StringUtils.h
src/shell/commands/: Add.cpp  CMakeLists.txt  Cat.cpp  Cd.cpp  Cp.cpp  Cpdir.cpp  Curl.cpp  Echo.cpp  Edit.cpp  Help.cpp  Kill.cpp  Listdata.cpp  Load.cpp  LoadState.cpp  Ls.cpp  MemInfo.cpp  Mkdir.cpp  Mv.cpp  Mvdir.cpp  OsLog.cpp  Ps.cpp  Pwd.cpp  Quit.cpp  Reset.cpp  Rm.cpp  Rmdir.cpp  Save.cpp  SaveState.cpp  Scheduler.cpp  SetCycles.cpp  SetScheduler.cpp  SetTickInterval.cpp  Sleep.cpp  Texed.cpp  Touch.cpp  Write.cpp
src/storage/: Storage  Storage.cpp  Storage.h  StorageFileOps.cpp  StorageFolderOps.cpp  StorageIO.cpp  StorageUtils.cpp  a.out  fake_storage_kernel.cpp  main  main.cpp
src/terminal/: Terminal.cpp  Terminal.h
src/terminal/helper/: History.cpp  History.h  Input.cpp  Input.h
tests/: acceptance_tests.cpp  integration_tests.cpp  process_tests.cpp  shell_tests.cpp  storage_tests.cpp
tests/testHelpers/: MockSysApi.h
timelogs/: meetings.md  timelogs_Aivaras.md  timelogs_Andrei.md  timelogs_Augustas.md  timelogs_Lukas.md  timelogs_Sarunas.md
